--- a/web-app/src/approval.json
+++ b/web-app/src/approval.json
@@ -7,22 +7,22 @@
     {
         "date": "2025-01-21",
         "approve": 50.7,
-        "disapprove": 44.3
+        "disapprove": 44.4
     },
     {
         "date": "2025-01-22",
         "approve": 50.9,
-        "disapprove": 43.8
+        "disapprove": 44.1
     },
     {
         "date": "2025-01-23",
-        "approve": 49.8,
-        "disapprove": 44.2
+        "approve": 49.9,
+        "disapprove": 44.3
     },
     {
         "date": "2025-01-24",
         "approve": 49.0,
-        "disapprove": 45.2
+        "disapprove": 45.3
     },
     {
         "date": "2025-01-27",
@@ -37,7 +37,7 @@
     {
         "date": "2025-01-29",
         "approve": 47.6,
-        "disapprove": 46.9
+        "disapprove": 47.0
     },
     {
         "date": "2025-01-30",
@@ -57,7 +57,7 @@
     {
         "date": "2025-02-04",
         "approve": 47.0,
-        "disapprove": 47.6
+        "disapprove": 47.7
     },
     {
         "date": "2025-02-05",
@@ -67,61 +67,61 @@
     {
         "date": "2025-02-06",
         "approve": 47.5,
-        "disapprove": 47.1
+        "disapprove": 47.2
     },
     {
         "date": "2025-02-07",
-        "approve": 47.8,
-        "disapprove": 46.7
+        "approve": 47.6,
+        "disapprove": 47.0
     },
     {
         "date": "2025-02-10",
-        "approve": 48.0,
-        "disapprove": 47.0
+        "approve": 47.9,
+        "disapprove": 47.2
     },
     {
         "date": "2025-02-11",
         "approve": 48.1,
-        "disapprove": 47.0
+        "disapprove": 47.1
     },
     {
         "date": "2025-02-12",
         "approve": 48.1,
-        "disapprove": 47.0
+        "disapprove": 47.1
     },
     {
         "date": "2025-02-13",
-        "approve": 47.9,
-        "disapprove": 48.7
+        "approve": 47.7,
+        "disapprove": 48.9
     },
     {
         "date": "2025-02-14",
-        "approve": 47.6,
-        "disapprove": 49.0
+        "approve": 47.7,
+        "disapprove": 48.9
     },
     {
         "date": "2025-02-17",
-        "approve": 46.9,
-        "disapprove": 49.5
+        "approve": 47.1,
+        "disapprove": 49.2
     },
     {
         "date": "2025-02-18",
         "approve": 47.0,
-        "disapprove": 49.2
+        "disapprove": 49.0
     },
     {
         "date": "2025-02-19",
-        "approve": 47.5,
+        "approve": 47.3,
         "disapprove": 48.2
     },
     {
         "date": "2025-02-20",
-        "approve": 47.3,
-        "disapprove": 48.3
+        "approve": 47.2,
+        "disapprove": 48.4
     },
     {
         "date": "2025-02-21",
-        "approve": 47.3,
+        "approve": 47.2,
         "disapprove": 48.4
     },
     {
@@ -137,7 +137,7 @@
     {
         "date": "2025-02-26",
         "approve": 47.5,
-        "disapprove": 48.8
+        "disapprove": 48.9
     },
     {
         "date": "2025-02-27",
@@ -151,8 +151,8 @@
     },
     {
         "date": "2025-03-03",
-        "approve": 46.7,
-        "disapprove": 49.6
+        "approve": 46.8,
+        "disapprove": 49.5
     },
     {
         "date": "2025-03-04",
@@ -161,12 +161,12 @@
     },
     {
         "date": "2025-03-05",
-        "approve": 45.9,
-        "disapprove": 50.6
+        "approve": 46.0,
+        "disapprove": 50.4
     },
     {
         "date": "2025-03-06",
-        "approve": 46.1,
+        "approve": 46.0,
         "disapprove": 50.4
     },
     {
@@ -176,28 +176,28 @@
     },
     {
         "date": "2025-03-10",
-        "approve": 46.3,
+        "approve": 46.2,
         "disapprove": 50.3
     },
     {
         "date": "2025-03-11",
-        "approve": 46.4,
+        "approve": 46.3,
         "disapprove": 50.3
     },
     {
         "date": "2025-03-12",
         "approve": 46.6,
-        "disapprove": 50.0
+        "disapprove": 50.1
     },
     {
         "date": "2025-03-13",
-        "approve": 46.3,
-        "disapprove": 50.2
+        "approve": 46.1,
+        "disapprove": 50.4
     },
     {
         "date": "2025-03-14",
-        "approve": 46.2,
-        "disapprove": 50.6
+        "approve": 46.0,
+        "disapprove": 50.8
     },
     {
         "date": "2025-03-17",
@@ -216,8 +216,8 @@
     },
     {
         "date": "2025-03-20",
-        "approve": 45.6,
-        "disapprove": 51.3
+        "approve": 45.5,
+        "disapprove": 51.4
     },
     {
         "date": "2025-03-21",
@@ -226,8 +226,8 @@
     },
     {
         "date": "2025-03-24",
-        "approve": 45.8,
-        "disapprove": 51.1
+        "approve": 45.7,
+        "disapprove": 51.2
     },
     {
         "date": "2025-03-25",
@@ -241,12 +241,12 @@
     },
     {
         "date": "2025-03-27",
-        "approve": 46.4,
+        "approve": 46.3,
         "disapprove": 50.7
     },
     {
         "date": "2025-03-28",
-        "approve": 46.3,
+        "approve": 46.2,
         "disapprove": 50.7
     },
     {
@@ -262,17 +262,17 @@
     {
         "date": "2025-04-02",
         "approve": 46.8,
-        "disapprove": 49.8
+        "disapprove": 49.7
     },
     {
         "date": "2025-04-03",
         "approve": 46.3,
-        "disapprove": 50.1
+        "disapprove": 50.2
     },
     {
         "date": "2025-04-04",
-        "approve": 45.6,
-        "disapprove": 50.8
+        "approve": 45.5,
+        "disapprove": 50.9
     },
     {
         "date": "2025-04-07",
@@ -291,23 +291,23 @@
     },
     {
         "date": "2025-04-10",
-        "approve": 44.8,
-        "disapprove": 50.9
+        "approve": 44.7,
+        "disapprove": 51.1
     },
     {
         "date": "2025-04-11",
-        "approve": 44.7,
-        "disapprove": 51.4
+        "approve": 44.5,
+        "disapprove": 51.7
     },
     {
         "date": "2025-04-14",
-        "approve": 44.3,
-        "disapprove": 51.8
+        "approve": 44.2,
+        "disapprove": 51.9
     },
     {
         "date": "2025-04-15",
         "approve": 44.0,
-        "disapprove": 52.2
+        "disapprove": 52.3
     },
     {
         "date": "2025-04-16",
@@ -317,16 +317,16 @@
     {
         "date": "2025-04-17",
         "approve": 43.9,
-        "disapprove": 52.6
+        "disapprove": 52.7
     },
     {
         "date": "2025-04-18",
-        "approve": 43.8,
+        "approve": 43.9,
         "disapprove": 52.9
     },
     {
         "date": "2025-04-21",
-        "approve": 43.1,
+        "approve": 43.2,
         "disapprove": 53.5
     },
     {
@@ -342,31 +342,196 @@
     {
         "date": "2025-04-24",
         "approve": 43.5,
-        "disapprove": 53.9
+        "disapprove": 54.0
     },
     {
         "date": "2025-04-25",
-        "approve": 43.9,
-        "disapprove": 53.0
+        "approve": 43.8,
+        "disapprove": 53.1
     },
     {
         "date": "2025-04-28",
-        "approve": 43.9,
-        "disapprove": 53.0
+        "approve": 43.8,
+        "disapprove": 53.1
     },
     {
         "date": "2025-04-29",
-        "approve": 43.9,
-        "disapprove": 53.0
+        "approve": 43.8,
+        "disapprove": 53.1
     },
     {
         "date": "2025-04-30",
-        "approve": 44.0,
-        "disapprove": 52.1
+        "approve": 44.2,
+        "disapprove": 51.9
     },
     {
         "date": "2025-05-01",
+        "approve": 43.6,
+        "disapprove": 52.6
+    },
+    {
+        "date": "2025-05-02",
         "approve": 44.0,
+        "disapprove": 52.0
+    },
+    {
+        "date": "2025-05-05",
+        "approve": 44.2,
+        "disapprove": 51.8
+    },
+    {
+        "date": "2025-05-06",
+        "approve": 44.3,
+        "disapprove": 51.6
+    },
+    {
+        "date": "2025-05-07",
+        "approve": 45.1,
+        "disapprove": 51.1
+    },
+    {
+        "date": "2025-05-08",
+        "approve": 44.9,
+        "disapprove": 51.4
+    },
+    {
+        "date": "2025-05-09",
+        "approve": 44.8,
+        "disapprove": 51.6
+    },
+    {
+        "date": "2025-05-12",
+        "approve": 45.1,
+        "disapprove": 51.4
+    },
+    {
+        "date": "2025-05-13",
+        "approve": 45.3,
+        "disapprove": 51.4
+    },
+    {
+        "date": "2025-05-14",
+        "approve": 44.9,
+        "disapprove": 51.5
+    },
+    {
+        "date": "2025-05-15",
+        "approve": 44.8,
+        "disapprove": 51.6
+    },
+    {
+        "date": "2025-05-16",
+        "approve": 44.7,
+        "disapprove": 51.7
+    },
+    {
+        "date": "2025-05-19",
+        "approve": 44.9,
+        "disapprove": 51.9
+    },
+    {
+        "date": "2025-05-20",
+        "approve": 44.8,
         "disapprove": 52.1
+    },
+    {
+        "date": "2025-05-21",
+        "approve": 44.6,
+        "disapprove": 52.1
+    },
+    {
+        "date": "2025-05-22",
+        "approve": 44.2,
+        "disapprove": 52.6
+    },
+    {
+        "date": "2025-05-23",
+        "approve": 44.4,
+        "disapprove": 52.6
+    },
+    {
+        "date": "2025-05-26",
+        "approve": 44.4,
+        "disapprove": 52.6
+    },
+    {
+        "date": "2025-05-27",
+        "approve": 44.6,
+        "disapprove": 52.3
+    },
+    {
+        "date": "2025-05-28",
+        "approve": 45.0,
+        "disapprove": 51.6
+    },
+    {
+        "date": "2025-05-29",
+        "approve": 45.0,
+        "disapprove": 51.6
+    },
+    {
+        "date": "2025-05-30",
+        "approve": 45.7,
+        "disapprove": 51.0
+    },
+    {
+        "date": "2025-06-02",
+        "approve": 45.7,
+        "disapprove": 51.0
+    },
+    {
+        "date": "2025-06-03",
+        "approve": 46.5,
+        "disapprove": 49.9
+    },
+    {
+        "date": "2025-06-04",
+        "approve": 46.4,
+        "disapprove": 50.4
+    },
+    {
+        "date": "2025-06-05",
+        "approve": 45.6,
+        "disapprove": 51.3
+    },
+    {
+        "date": "2025-06-06",
+        "approve": 45.1,
+        "disapprove": 51.9
+    },
+    {
+        "date": "2025-06-09",
+        "approve": 45.0,
+        "disapprove": 52.2
+    },
+    {
+        "date": "2025-06-10",
+        "approve": 45.0,
+        "disapprove": 52.0
+    },
+    {
+        "date": "2025-06-11",
+        "approve": 44.8,
+        "disapprove": 52.3
+    },
+    {
+        "date": "2025-06-12",
+        "approve": 44.4,
+        "disapprove": 52.7
+    },
+    {
+        "date": "2025-06-13",
+        "approve": 43.9,
+        "disapprove": 53.2
+    },
+    {
+        "date": "2025-06-16",
+        "approve": 44.1,
+        "disapprove": 53.2
+    },
+    {
+        "date": "2025-06-17",
+        "approve": 44.1,
+        "disapprove": 53.2
     }
 ]
