--- a/web-app/package.json
+++ b/web-app/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lucide/lab": "^0.1.2",
     "@tailwindcss/vite": "^4.1.3",
     "lucide-react": "^0.487.0",
     "moment": "^2.30.1",
