--- a/web-app/package.json
+++ b/web-app/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^6.30.1",
     "recharts": "^2.15.2",
     "tailwindcss": "^4.1.3"
   },
